garde/tests/ui/compile-fail/contains_mismatched_types.rs
static NUM: u32 = 666;

#[derive(garde::Validate)]
struct Test {
    #[garde(contains(NUM))]
    field: String,
}

fn main() {}
